--- a/Task 01.html
+++ b/Task 01.html
@@ -15,7 +15,7 @@
             </div>
         </div>
         <div class="card">
-            <p id="title">SLYC</p>
+            <p id="title">Nihap</p>
             <div class="change-btn">
                 <button onclick="changeName()">Button1</button>
             </div>
