--- a/Task 12.html
+++ b/Task 12.html
@@ -56,7 +56,7 @@ img{
                             <label for="divide">Divide</label>
                         </fieldset></td>
 
-                        <td><img src="download.jpeg" alt=""></td>
+                        <td><img src="JavaScript-logo.png" alt=""></td>
                     </tr>
                     <tr>
                         <td><button onclick="multiTasks()">Answer</button></td>
